Bug 1020003 - Always use AsyncTransactionTracker on ImageBridge on gonk r=nical